# taskrunner

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh  demo.yaml  tasks.yaml
src/: config.rs  context.rs  main.rs  matcher.rs  parser.rs  runner.rs  task.rs
