[package]
name = "task_runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "taskrunner"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
handlebars = "4.5"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
jsonpath_lib = "0.3"
clap = { version = "4.5", features = ["derive"] }
